--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "Michi Meme Blaster 6969",
     "version": "2.0.0",
-    "description": "michi meme assistant for bullposting memes fast. featuring michi costumes, cat, dressing cat, invinte memes, standing cat, michi, solana meme, crypto memes, bullposting.",
+    "description": "Michi meme assistant for Twitter—bullpost $michi fast and easy!",
     "permissions": ["activeTab", "scripting", "storage"],
     "host_permissions": ["https://twitter.com/*", "https://x.com/*"],
     "content_scripts": [
